# lda

./: .gitignore  AP analysis.ipynb  CMakeLists.txt  Corpus creation.ipynb  Dirichlet Distribution.ipynb  Generated dataset analysis.ipynb  README.md  Untitled.ipynb  p(w|z) to p(z|w).ipynb
cpp/: CMakeLists.txt  DoxyConfig  default_settings.txt  main.cpp  settings.txt  wrapper.py
cpp/src/: CMakeLists.txt  alpha.cpp  alpha.h  data.cpp  data.h  dirichlet.cpp  dirichlet.h  expectation_prop.cpp  expectation_prop.h  gibbs.cpp  gibbs.h  lda.cpp  lda.h  lda_model.cpp  lda_model.h  main.cpp  online_var_bayes.cpp  online_var_bayes.h  util.cpp  util.h  var_bayes.cpp  var_bayes.h
cpp/test/: CMakeLists.txt  test_data.cpp  test_dirichlet.cpp  test_util.cpp
notebooks/: AP analysis.ipynb  Artificial Analysis.ipynb  Corpus creation.ipynb  Dirichlet Distribution.ipynb  Generated dataset analysis.ipynb  Untitled.ipynb
